<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vocaloid Quiz Android Edition</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_text_1">Welcome to the vocaloid quiz!</string>
    <string name="main_menu_text_2">This quiz is designed to test your knowledge about vocaloid.</string>
    <string name="main_menu_text_3">click next to continue</string>
    <string name="hello_world">Welcome to the Vocaloid Quiz BETA!</string>
    <string name="start">Start</string>
    <string name="title_activity_quiz_01">Quiz_01</string>
    <string name="image_of_quiz_question">Image of Quiz Question</string>
    <string name="q1_1">Who is the vocaloid in this picture?</string>
    <string name="sCorrect">&quot;Correct: 0&quot;</string>
    <string name="sIncorrect">&quot;Incorrect: 0&quot;</string>
    <string name="q1_2">What is the last name of these twins?</string>
    <string name="q1_3">Please put the names in the correct place.</string>
    <string name="btn_main_menu">Next</string>
    <string name="title_activity_quiz__selection_menu">Quiz_Selection_menu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_quiz__select">Quiz_Select</string>
    <string name="cont_miku_select">selects miku</string>
    <string name="contdescqiuz1">button for first quiz</string>
    <string name="hatsune_miku">Hatsune Miku</string>
    <string name="kagame_rin">Kagame Rin</string>
    <string name="quiz_01_btn_text">Submit</string>
    <string name="q1_text">QUIZ PACK 01</string>
    <string name="q2_text">QUIZ PACK 02</string>
    <string name="q3_text">QUIZ PACK 03</string>
	<string name="title_activity_user_login_screen">User_login_screen</string>
	<string name="plus_generic_error">NULL</string>
	

</resources>
